# vibescript-rs

./: .gitignore  Cargo.toml
scripts/: e2e_test.sh
vibescript-cli/: Cargo.toml
vibescript-cli/src/: main.rs
vibescript-core/: Cargo.toml
vibescript-core/src/: ast.rs  eval.rs  lexer.rs  lib.rs  parser.rs  value.rs
vibescript-core/wit/: vibes.wit
vibescript-host/: Cargo.toml  build.rs
vibescript-host/src/: lib.rs  state.rs
vibescript-host/tests/: examples_test.rs  interpolation_test.rs  module_test.rs
vibescript-host/tests/fixtures/modules/: alias_test.vibe  circular_a.vibe  circular_b.vibe
vibescript-host/wit/: vibes.wit
