[package]
name = "vibescript-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
vibescript-host = { path = "../vibescript-host" }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"], default-features = false }
anyhow = "1.0.102"
