[package]
name = "vibescript-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.12.0"
logos = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wit-bindgen = "0.38.0"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
ariadne = "0.4.1"
